		crashed.
		Implemented auto area create comparing a new received echo
		from a uplink which has a echomail taglist in one of the
		mailgroups defined. The area is created with the defaults
		from the mailgroup.
		If mbfido fails to unzip a incoming mailarchive, a second
		attempt is done after a sync() and one second delay. This
		seems to be a kernel flush problem.
		In the To field of a created TIC file there is now a comma
		between the sysop name and fidonet aka.
		When creating a filefind netmail reply there was no 
		destination address.
		Corrected spelling errors in the Areamgr and Filemgr help
		messages.
		Removed some debug logging from the RFC->FTN gate.
		Implemented the FileMgr and AreaMgr pause and resume commands.
		Changed logging when AreaMgr/FileMgr commands did fail.
		Some checks improved and fixed some potential sigsegv crashes.
		Reduced aka match level for (dis)connect areas to zone, net.
		This should fix problems on systems with multiple aka's when
		the first aka is not the aka in the areas.
		In mgr result reports, lines with connected areas do now also
		display the aka to which they are connected.
		The file forward function now always puts a 8.3 filename in
		the outgoing ticfile. For most files nothing is changed.
		AreaMgr and FileMgr netmails are now split into more netmails
		when the become too large.
		When a downlink requests an echomail area which is not yet 
		available, and there is a areas file for some uplink, the area
		is automatic created and a areamgr request is sent to the 
		uplink to connect that area. The area is created with the
		defaults from the mailgroup.
		Experimental patch in mkftnhdr to create a To address in news
		articles where a Reply-To: header is present.
		It was not possible to disconnect file areas.
		Added nopper code to full mailscan.
		Fixed a problem that caused a SIGSEGV when a node was in the
		ticfiles setup to forward file to and there was no noderecord.