@@ -4634,6 +4634,8 @@ v0.33.20        10-Feb-2002
 		If mbfido fails to unzip a incoming mailarchive, a second
 		attempt is done after a sync() and one second delay. This
 		seems to be a kernel flush problem.
+		The same goes for adding .pkt files to the outbound, a second
+		try is done after a sync() to add the .pkt to the archive.
 		In the To field of a created TIC file there is now a comma
 		between the sysop name and fidonet aka.
 		When creating a filefind netmail reply there was no 
